--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,10 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
-          scp -i private_key.pem -o StrictHostKeyChecking=no -r . $USER@$HOST:/path/to/deploy
-          ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST "cd /path/to/deploy && ./deploy_script.sh"
+
+          # Deploy files to the EC2 instance
+          scp -i private_key.pem -o StrictHostKeyChecking=no -r . ${{ env.USER }}@${{ env.HOST }}:/home/${{ env.USER }}/KuduNav-Notifications
+
+          # SSH into the EC2 instance and run the deployment script
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ env.USER }}@${{ env.HOST }} "cd /home/${{ env.USER }}/KuduNav-Notifications && ./deploy_script.sh"
           
