--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Save and Test Private Key
+        env:
+          PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
+          ls -l private_key.pem
+
       - name: Create Deployment Directory
         env:
           PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
