--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,14 @@ jobs:
         with:
           python-version: '3.x'
 
-      #- name: Install dependencies
-        #run: |
-          #pip install -r requirements.txt
+      # Uncomment these steps if needed
+      # - name: Install dependencies
+      #   run: |
+      #     pip install -r requirements.txt
 
-      #- name: Run tests
-      #  run: |
-      #    pytest
+      # - name: Run tests
+      #   run: |
+      #     pytest
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,8 +49,12 @@ jobs:
           HOST: ${{ secrets.EC2_HOST }}
           USER: ${{ secrets.EC2_USER }}
         run: |
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
           ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ env.USER }}@${{ env.HOST }} "mkdir -p /home/${{ env.USER }}/KuduNav-Notifications"
 
+      - name: List Files for Deployment
+        run: ls -la
 
       - name: Deploy to EC2
         env:
@@ -59,10 +64,9 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
-
+          
           # Deploy files to the EC2 instance
-          scp -i private_key.pem -o StrictHostKeyChecking=no -r . ${{ env.USER }}@${{ env.HOST }}:/home/${{ env.USER }}/KuduNav-Notifications
-
+          scp -i private_key.pem -o StrictHostKeyChecking=no -r * ${{ env.USER }}@${{ env.HOST }}:/home/${{ env.USER }}/KuduNav-Notifications
+          
           # SSH into the EC2 instance and run the deployment script
           ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ env.USER }}@${{ env.HOST }} "cd /home/${{ env.USER }}/KuduNav-Notifications && ./deploy_script.sh"
-          
