--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      #- name: Run tests
-      #  run: npm test
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -32,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Save and Test Private Key
+      - name: Save Private Key
         env:
           PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
         run: |
@@ -58,7 +55,7 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
-          scp -i private_key.pem -o StrictHostKeyChecking=no -r * ${{ env.USER }}@${{ env.HOST }}:/home/${{ env.USER }}/KuduNav-Notifications
+          scp -i private_key.pem -o StrictHostKeyChecking=no -r . ${{ env.USER }}@${{ env.HOST }}:/home/${{ env.USER }}/KuduNav-Notifications
 
       - name: Verify Files on EC2 Instance
         env:
@@ -98,8 +95,7 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
-          ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ env.USER }}@${{ env.HOST }} "cd /home/${{ env.USER }}/KuduNav-Notifications && nohup npm start > server.log 2>&1 &"
-
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ env.USER }}@${{ env.HOST }} "cd /home/${{ env.USER }}/KuduNav-Notifications && nohup node index.js > server.log 2>&1 &"
 
 # nohup allows the command to continue running in the background even after the SSH session ends.
 # npm start > server.log 2>&1 & redirects output to a log file and runs the command in the background.
