--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
