--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
+    "coverage": "jest --coverage && codecov",
     "start": "node src/bin/ww.js"
   },
   "author": "",
@@ -27,6 +28,7 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-modules": "^0.1.6",
     "babel-jest": "^29.7.0",
+    "codecov": "^3.8.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
